# abstractions

./: .clang-format  .gitignore  .mypy.ini  CMakeLists.txt  LICENSE  README.md  conanfile.py  environment.yml  requirements-docs.txt  requirements.txt
.github/actions/run-linter/: action.yml
.github/workflows/: build.yml  docs.yml  lint.yml
docs/: CMakeLists.txt  Doxyfile.in  abstracting-images.md  conf.py  getting-started.md  how-it-works.md  index.md  index.rst  references.bib
docs/api/: api.rst  engine.rst  images.rst  pgpe.rst  types.rst
docs/examples/: 2018.json  monalisa-a01.json  monalisa-a1.json  monalisa-circ-tri.json  monalisa-circs.json  monalisa-rects.json  monalisa.json  yd.json
include/: abstractions.h
include/abstractions/: abstractions.h  console.h  engine.h  errors.h  image.h  pgpe.h  profile.h  profiler.h  render.h  shapes.h  types.h  utilities.h
include/abstractions/math/: matrices.h  random.h  types.h
include/abstractions/render/: canvas.h  renderer.h  shapes.h
include/abstractions/terminal/: chrono.h  console.h  table.h
include/abstractions/threads/: job.h  queue.h  threadpool.h  worker.h
profiles/: linux-amd64  linux-x86_64  macos-arm64
scripts/: run-clang-format
src/: CMakeLists.txt  abstractions.cpp
src/abstractions/: CMakeLists.txt  abstractions.cpp  console.cpp  engine.cpp  errors.cpp  image.cpp  json.cpp  json.h  pgpe.cpp  render.cpp  shapes.cpp  utilities.cpp
src/abstractions/render/: canvas.cpp  renderer.cpp  shapes.cpp
src/abstractions/terminal/: chrono.cpp  console.cpp  table.cpp
src/abstractions/threads/: job.cpp  queue.cpp  threadpool.cpp  worker.cpp
src/test/: CMakeLists.txt  assert-test.cpp  errors.cpp  image.cpp  math.cpp  pgpe.cpp  profile.cpp  samples-path.h.in  support.h  test-paths.h.in  test.cpp  utilities.cpp
src/test/feature/: assert.cpp  canvas.cpp  optimizer.cpp  renderer.cpp  support.h  threads.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
